[tool.poetry]
name = "emojisearcher"
version = "0.1.0"
description = ""
authors = ["Bob Belderbos <bobbelderbos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.8.2"
emoji = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emo = "emojisearcher.script:main"
