[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "emojisearcher"
authors = [{name = "Bob Belderbos", email = "bob@pybit.es"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pyperclip >=1.8.2",
    "rich >=12.3.0",
]

[tool.flit.module]
name = "emojisearcher"

[project.optional-dependencies]
test = [
    "pytest",
]

[project.urls]
Source = "https://github.com/bbelderbos/emojisearcher"
